# CodEval

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  README_195.md  ReadMe.txt  SCHEDULE-195.md  __main__.py  canvasParameters.py  checksql.sh  codeval.py  commons.py  conver  convertDictToMkdn.py  convertMD2Html.py  evaluate.py  evaluate.sh  file_utils.py  make_zipapp.sh  mkdnparser.py  parsediff  parsevalgrind  pullCourse.py  pullcourse.py  pypi-test.sh  pyproject.toml  requirements.txt  runvalgrind.sh  submissionhandler.py  test_submissions.sh  test_template.html  testdocker.py  utils.py  vpypi-test.sh
.claude/: settings.json
SQL/: Dockerfile
distributed/: __init__.py  classes.py  dist_utils.py  distributed_test.py  heterogenous.py  homogenous.py  main.py  utils.py
docs/: trouble_shooting.md
samples/: assignment-name.codeval  codeval.ini
scripts/: parsevalgrind
tests/: .gitkeep  Makefile  mycalc.cpp  pycalc.py  sample_cpp.cpp  sample_echo.py  sample_echo_bare.py  sample_error_exit.py  sample_file_writer.py  sample_slow.py  sample_spaces.py  test_bare_tags.codeval  test_check_codeval.py  test_check_function.codeval  test_check_function_cpp.codeval  test_check_grading.py  test_codeval.py  test_compare.codeval  test_compile.codeval  test_comprehensive.codeval  test_cpp_make.codeval  test_cpp_make_edge_cases.codeval  test_cpp_objects.codeval  test_create_assignment.py  test_error_bare.codeval  test_evaluate_submissions.py  test_exit_code.codeval  test_exit_with_error.codeval  test_file_io.codeval  test_function_detection.py  test_hidden.codeval  (+6 more)
(+72 files in other folders)
