[build-system]
requires = ["setuptools>=69", "wheel>=0.40"]
build-backend = "setuptools.build_meta"

[project]
name = "assignment-codeval"
version = "0.0.5"
description = "CodEval for evaluating programming assignments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
"canvasapi==3.3.0",
"certifi==2021.10.8",
"charset-normalizer==2.0.9",
"click==8.2.1",
"configparser==5.2.0",
"idna==3.3",
"pytz==2021.3",
"requests==2.27.0",
"urllib3==1.26.7",
"pymongo==4.3.3",
"markdown==3.4.1",
]

[project.scripts]
assignment-codeval = "assignment_codeval.cli:cli"
