[build-system]
requires = ["setuptools>=69", "wheel>=0.40"]
build-backend = "setuptools.build_meta"

[project]
name = "assignment-codeval"
version = "0.0.15"
description = "CodEval for evaluating programming assignments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
"canvasapi==3.3.0",
"click==8.2.1",
"configparser==5.2.0",
"pytz==2021.3",
"requests>=2.28.0",
"pymongo==4.3.3",
"markdown==3.4.1",
"mdx-better-lists>=1.0.0",
"anthropic>=0.39.0",
"openai>=1.0.0",
"google-generativeai>=0.8.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
assignment-codeval = "assignment_codeval.cli:cli"
